# komorebi

./: .flake8  .gitignore  README.md  komorebi-wallpaper-creator.py  komorebi.py  komorebi.spec  meson.build
data/: meson.build
data/Other/: org.komorebiteam.komorebi.desktop.in
komorebi/: meson.build  screen.py  settings.py  utilities.py
komorebi/overlays/: desktop.py
